[project]
name = "moloko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mdaeron", email = "mathieu@daeron.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "pyjokes>=0.8.3",
    "streamlit>=1.51.0",
]

[project.scripts]
moloko = "moloko:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
